<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:padding="8dp"
    android:orientation="horizontal"
    android:rowCount="4">

    <TextView
        android:id="@+id/rv_ingredient_name"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/app_ingredients"
        android:padding="4dp"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/rv_ingredient_quantity"
        android:layout_columnSpan="1"
        android:hint="@string/quantity"
        android:padding="4dp"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/rv_ingredient_price"
        android:layout_columnSpan="1"
        android:hint="@string/price"
        android:padding="4dp"
        android:textSize="16dp" />


</GridLayout>