<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/l_recipe_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:src="@drawable/imgtest" />

    <TextView
        android:id="@+id/l_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textSize="28sp"
        android:textAllCaps="true"
        android:text="@string/name_recipe"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/l_recipe_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_recipe">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="tempo"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/portion"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profit"
                android:textAlignment="center"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/l_recipe_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/r_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="tempo"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/r_portion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/portion"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/r_profit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profit"
                android:textAlignment="center"
                android:textSize="16dp" />
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:text="@string/name_ingredient"
            android:textSize="20sp"
            />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/prepare_method"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/price_sell"
        android:layout_alignParentRight="true"/>


</LinearLayout>