<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:textColorHint="@color/colorWhite">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_ingredient"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_ingredient"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quantity_ingredient"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/price_ingredient"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_save_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingEnd="32dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingStart="32dp"
            android:text="Adicionar"
            android:textColor="@color/colorWhite" />

    </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</LinearLayout>