<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luanna.myapp.OpenRecipe">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <android.support.v7.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="8dp"
            app:title="@string/app_recipes"
            app:titleTextColor="@color/colorWhite">

        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                    <ImageView
                        android:id="@+id/recipe_photo"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:src="@drawable/imgtest" />

                    <TextView
                        android:id="@+id/recipe_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textSize="28sp"
                        android:textAllCaps="true"
                        android:text="@string/name_recipe"
                        android:textStyle="bold" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="tempo"
                                android:textAlignment="center"
                                android:textSize="16dp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/portion"
                                android:textAlignment="center"
                                android:textSize="16dp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profit"
                                android:textAlignment="center"
                                android:textSize="16dp" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="2dp" >

                            <TextView
                                android:id="@+id/r_time"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="tempo"
                                android:textAlignment="center"
                                android:textSize="16dp" />

                            <TextView
                                android:id="@+id/r_portion"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/portion"
                                android:textAlignment="center"
                                android:textSize="16dp" />

                            <TextView
                                android:id="@+id/r_profit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profit"
                                android:textAlignment="center"
                                android:textSize="16dp" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:padding="8dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_margin="8dp"
                                android:layout_height="wrap_content"
                                android:text="@string/quantity"
                                android:textSize="20sp"
                                />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_margin="8dp"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/name_ingredient"
                                android:textSize="20sp"
                                />

                    </LinearLayout>

                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/price_sell"
                            android:textAlignment="center"
                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Faturamento"
                            android:textAlignment="center"
                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Lucro Total"
                            android:textAlignment="center"
                            android:textSize="16dp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/prepare_method_example"/>

                    <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Preço"
                            android:textAlignment="center"
                            android:textSize="16dp" />

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Faturamento"
                            android:textAlignment="center"
                            android:textSize="16dp" />

                        <TextView

                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/profit"
                            android:textAlignment="center"
                            android:textSize="16dp" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>